add_executable(jinterf main.cc)
target_link_libraries(jinterf PRIVATE jamsched)
target_include_directories(jamsched PRIVATE "${PROJECT_SOURCE_DIR}/include/")

add_subdirectory(J2C_Async)
add_subdirectory(J2C_Sync)
add_subdirectory(C2J)
add_subdirectory(Multi_Levels)
#add_subdirectory(Test_Restart)
add_subdirectory(RT_Tasks)
add_subdirectory(Local_Spawn)
#add_subdirectory(Task_Thiefs)
#add_subdirectory(Mixed)
