add_executable(skynet main.cc)
target_compile_features(skynet PUBLIC cxx_std_17)
target_link_libraries(skynet PRIVATE jamsched tcmalloc)
# Boost
find_package(Boost 1.65.0 COMPONENTS program_options filesystem system fiber REQUIRED)
include_directories(${Boost_INCLUDE_DIRS})
add_executable(skynetbfib async_bfib.cc)
target_link_libraries(skynetbfib PRIVATE ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} pthread tcmalloc)
add_executable(skynetbfibfut async_bfibfut.cc)
target_link_libraries(skynetbfibfut PRIVATE ${CMAKE_THREAD_LIBS_INIT} ${Boost_LIBRARIES} pthread tcmalloc)
configure_file("${CMAKE_CURRENT_SOURCE_DIR}/skynet.erl" "${CMAKE_CURRENT_BINARY_DIR}/skynet.erl" COPYONLY)